add redis message
