# doc/swagger/simple_bank.swagger.json
@@ -16,7 +16,7 @@
     "application/json"
   ],
   "paths": {
-    "/v1/create_user": {
+    "/v2/create_user": {
       "post": {
         "operationId": "SimpleBank_CreateUser",
         "responses": {
@@ -48,7 +48,7 @@
         ]
       }
     },
-    "/v1/login_user": {
+    "/v2/login_user": {
       "post": {
         "operationId": "SimpleBank_LoginUser",
         "responses": {
@@ -80,7 +80,7 @@
         ]
       }
     },
-    "/v1/update_user": {
+    "/v2/update_user": {
       "patch": {
         "operationId": "SimpleBank_UpdateUser",
         "responses": {
